# Reports

./: README.md
C语言程序设计/: C语言实验报告规范示例21s.docx  U202117281张骁凯.docx  U202117281张骁凯实验1.docx  U202117281张骁凯实验2.docx  U202117281张骁凯实验3.doc  U202117281张骁凯实验4.docx  U202117281张骁凯实验5.docx  U202117281张骁凯实验6.docx  U202117281张骁凯实验7.doc  U202117281张骁凯实验8.docx  实验1.docx  实验2.docx  实验3.doc  实验4.docx  实验5.docx  实验6.docx  实验7.doc  实验8.docx  汇总报告.docx
人工智能导论/第一次上机/: main.cpp
人工智能导论/第二次上机/: 人工智能导论实验（遗传算法）.docx
人工智能导论/结课论文/: mlp.py  mlp_classify.ipynb
操作系统原理/实验三/: 实验报告-3.md
操作系统原理/实验二/: 实验报告-2.md
操作系统原理/实验四/: 实验报告-4.md
数字图像处理/: exp1.ipynb  exp2.ipynb  exp3.ipynb  exp4.ipynb  exp5.ipynb  exp6.ipynb
数学建模/: 上机题.md  最优化大作业.md
数据库系统原理/2023实验/: .~实验二.doc  U202117281-张骁凯-实验14.doc  U202117281-张骁凯-实验15.doc  U202117281-张骁凯-实验17.doc  U202117281-张骁凯-实验2.doc  U202117281-张骁凯-实验7.doc  实验04.doc  实验08.doc  实验10.doc  实验12.doc  实验13.doc
编译技术/: CMakeLists.txt  GenIR.cpp  GenObject.cpp  ObjectFile.s  ast.cpp  def.h  lex.l  lex.yy.c  parser  parser.tab.cpp  parser.tab.hpp  parser.ypp  run.sh  semantics.cpp  编译原理课程设计实验报告.md
编译技术/testCodes/: array.c  error.c  fibo.c  quicksort.c
计算机组成原理/: alu.circ  storage.circ  演示视频.txt
软件体系结构/: LICENSE  README.md
软件体系结构/心得体会-GainedKnowledge/: cdt.md  dekrt.md
软件体系结构/架构设计-ArchitectureDesign/: 架构设计-ArchitectureDesign.pptx  架构设计文档-ArchitectureDesign.md
软件体系结构/架构评审-ArchitectureReview/: 架构评审PPT-ArchitectureReview.pptx  架构评审文档-ArchitectureReview.md
软件工程理论与实践/: 上机报告.docx
软件设计综合实践/: 软件设计综合实践实验报告.docx  软件设计综合实践实验报告.md
面向对象系统设计与分析/2023上机/: 作业1.docx  (+3 more)
(+104 files in other folders)
